@@ -1,3 +1,11 @@
+2000-12-03  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpd/ntp_proto.c (receive): That any_interface is now an
+	rbufp->dstadr.
+	Various other doc and code cleanup.
+	* ntpd/ntp_peer.c (findmanycastpeer): Fixes
+	From Dave Mills
+
 2000-12-02  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* ntpd/ntp_request.c (do_conf): call peer_config with
